# bex-hooks

./: .gitignore  README.md  pyproject.toml
hooks/bex-hooks-files/: README.md  pyproject.toml
hooks/bex-hooks-files/src/bex_hooks/hooks/files/: __init__.py  file.py  utils.py
hooks/bex-hooks-files/src/bex_hooks/hooks/python/: __init__.py  setup.py
hooks/bex-hooks-python/: README.md  pyproject.toml
hooks/bex-hooks-python/src/bex_hooks/hooks/files/: __init__.py  file.py
hooks/bex-hooks-python/src/bex_hooks/hooks/python/: __init__.py  _interface.py  setup.py  utils.py
hooks/bex-hooks/files/src/bex_hooks/hooks/files/: _interface.py  file.py  utils.py
hooks/bex-hooks/python/: pyproject.toml
hooks/bex-hooks/python/src/bex_hooks/hooks/python/: utils.py
src/bex_hooks/exec/: __init__.py  __main__.py  _interface.py  cli.py  config.py  errors.py  executor.py  plugin.py  spec.py  ui.py
