[project]
name = "bex-hooks-files"
version = "0.1.0"
description = "bex-hooks-files"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [ { name = "Lucino772" } ]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
]

[tool.uv.build-backend]
module-name = "bex_hooks.hooks.files"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
